# forma

./: README.md  pyproject.toml  settings.toml
forma/: __main__.py  config.py  form.py  server.py
misc/: favicon.afpub  logo.afpub  text.afpub
static/img/: browserconfig.xml  site.webmanifest
template/: base.html.jinja2  form.html.jinja2  form_not_found_error.html.jinja2  index.html.jinja2
